added nginx as reverse proxy with Lets Encrypt
This adds a reverse proxy infront of the different services, so they are all adressable via the same public URL and port. The services are avilable via differents paths, e.g. /wiki/, /query/, /quickstatements/, etc. It also calls up Lets Encrypt to get a certificate for the current domain.

--- a/example/template.env
+++ b/example/template.env
@@ -49,3 +49,8 @@ QUICKSTATEMENTS_PORT=8840
 ## ElasticSearch
 MW_ELASTIC_HOST=elasticsearch.svc
 MW_ELASTIC_PORT=9200
+
+## Proxy with Lets Encrypt
+SERVER_NAME=example.org
+LETS_ENCRYPT_DOMAINS=example.org,subdomain.example.org
+LETS_ENCRYPT_EMAIL=mail@example.org
