added nginx as reverse proxy with Lets Encrypt
This adds a reverse proxy infront of the different services, so they are all adressable via the same public URL and port. The services are avilable via differents paths, e.g. /wiki/, /query/, /quickstatements/, etc. It also calls up Lets Encrypt to get a certificate for the current domain.

--- a/example/docker-compose.extra.yml
+++ b/example/docker-compose.extra.yml
@@ -117,6 +117,31 @@ services:
       - OAUTH_CONSUMER_KEY=${OAUTH_CONSUMER_KEY}
       - OAUTH_CONSUMER_SECRET=${OAUTH_CONSUMER_SECRET}
       - MW_SITE_NAME=${MW_SITE_NAME}
+  proxy:
+    image: wikibase/proxy
+    build:
+      context: ../Docker/build/Proxy
+      dockerfile: Dockerfile
+    depends_on:
+      - wikibase
+      - wdqs-proxy
+      - wdqs-frontend
+      - quickstatements
+    ports:
+     - "80:80"
+     - "443:443"
+    volumes:
+     - proxy-config-data:/etc/nginx/
+     - proxy-letsencrypt-data:/etc/letsencrypt
+     - proxy-letsencrypt-data-backup:/var/lib/letsencrypt
+    networks:
+      default:
+        aliases:
+         - proxy.svc
+    environment:
+     - SERVER_NAME=${SERVER_NAME}
+     - LETS_ENCRYPT_DOMAINS=${LETS_ENCRYPT_DOMAINS}
+     - LETS_ENCRYPT_EMAIL=${LETS_ENCRYPT_EMAIL}
 
 volumes:
   LocalSettings:
@@ -124,3 +149,7 @@ volumes:
   elasticsearch-data:
   quickstatements-data:
   mediawiki-mysql-data:
+  proxy-config-data:
+  proxy-letsencrypt-data:
+  proxy-letsencrypt-data-backup:
+  
