--- a/variables.env
+++ b/variables.env
@@ -27,5 +27,5 @@ GZIP_COMPRESSION_RATE=9
 
 DEFAULT_DATABASE_IMAGE_NAME=mariadb:10.3
 
-DEFAULT_BUNDLE_WMF_EXTENSIONS=Babel,cldr,CirrusSearch,ConfirmEdit,Elastica,EntitySchema,Nuke,OAuth,Scribunto,UniversalLanguageSelector,VisualEditor,WikibaseCirrusSearch,WikibaseManifest
+DEFAULT_BUNDLE_WMF_EXTENSIONS=Babel,cldr,CirrusSearch,ConfirmEdit,Elastica,EntitySchema,Nuke,OAuth,OpenIDConnect,PluggableAuth,Scribunto,TemplateStyles,UniversalLanguageSelector,VisualEditor,WikibaseCirrusSearch,WikibaseManifest
 DEFAULT_BUNDLE_EXT_EXTENSIONS=WikibaseLocalMedia
